시퀄라이즈전

--- a/learn-express2/views/index.ejs
+++ b/learn-express2/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <% include header.ejs%>
   <body>
     <h1><%= title %></h1>
     
@@ -16,4 +17,5 @@
       <p>pug 공부합시다</p>
     <%}%>
   </body>
+  <% include footer.ejs%>
 </html>
