--- a/learn-express2/views/index.ejs
+++ b/learn-express2/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    
+    <!--for(i of fruit) 해당 배열에 값이 나옴-->
     <%for(i in fruit){%>
     <p>Welcome to <%= i %></p>
     <%}%>
