--- a/node-place/views/result.pug
+++ b/node-place/views/result.pug
@@ -61,6 +61,6 @@ block content
   script(
     async
     defer
-    src="https://maps.googleapis.com/maps/api/js"
+    src="https://maps.googleapics.com/maps/api/js"
       + "?key=AIzaSyDaF4Pzmqg5oVAaC4iMIrZVeyq42bAKHhU&callback=initMap"
   )
